--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
   "proxy": "http://localhost:8001",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.1",
     "scripts": "^0.1.0",
     "sweetalert2": "^11.15.3"
   },
