--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.486.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "react-to-print": "^3.0.6",
     "react-toastify": "^11.0.2",
     "recharts": "^2.15.1",
     "scripts": "^0.1.0",
